Software/prog/SW4STM32_STM32F429i_DISCO/TouchGFX/output_CompileSimulator.log
Converting images
Compiling gui/src/screen1_screen/Screen1View.cpp
Compiling gui/src/model/Model.cpp
Compiling gui/src/screen1_screen/Screen1Presenter.cpp
Compiling generated/gui_generated/src/screen1_screen/Screen1ViewBase.cpp
gui/src/model/Model.cpp:3:22: fatal error: cmsis_os.h: No such file or directory
 #include "cmsis_os.h"
                      ^
compilation terminated.
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/model/Model.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/model/Model.o] Error 1
make[2]: *** Waiting for unfinished jobs....
gui/src/screen1_screen/Screen1Presenter.cpp:19:31: error: no 'void Screen1Presenter::update()' member function declared in class 'Screen1Presenter'
 void Screen1Presenter::update() {
                               ^
gui/src/screen1_screen/Screen1Presenter.cpp:26:39: error: no 'void Screen1Presenter::btnPlusPressed()' member function declared in class 'Screen1Presenter'
 void Screen1Presenter::btnPlusPressed() {
                                       ^
gui/src/screen1_screen/Screen1Presenter.cpp:31:40: error: no 'void Screen1Presenter::btnMinusPressed()' member function declared in class 'Screen1Presenter'
 void Screen1Presenter::btnMinusPressed() {
                                        ^
gui/src/screen1_screen/Screen1Presenter.cpp:40:72: error: no 'void Screen1Presenter::hardButtonPressed(uint16_t)' member function declared in class 'Screen1Presenter'
 void Screen1Presenter::hardButtonPressed(uint16_t numberOfButtonpressed) {
                                                                        ^
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1Presenter.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1Presenter.o] Error 1
gui/src/screen1_screen/Screen1View.cpp:18:6: error: 'array' in namespace 'std' does not name a template type
 std::array<bool, NBR_OF_BUTTONS> Screen1View::getButtonsState() {
      ^~~~~
gui/src/screen1_screen/Screen1View.cpp:27:37: error: no 'void Screen1View::setBallNbr(int)' member function declared in class 'Screen1View'
 void Screen1View::setBallNbr(int nbr) {
                                     ^
gui/src/screen1_screen/Screen1View.cpp:32:35: error: no 'void Screen1View::btnMinusPressed()' member function declared in class 'Screen1View'
 void Screen1View::btnMinusPressed() {
                                   ^
gui/src/screen1_screen/Screen1View.cpp:36:34: error: no 'void Screen1View::btnPlusPressed()' member function declared in class 'Screen1View'
 void Screen1View::btnPlusPressed() {
                                  ^
gui/src/screen1_screen/Screen1View.cpp:40:37: error: no 'void Screen1View::setPower(int)' member function declared in class 'Screen1View'
 void Screen1View::setPower(int power) {
                                     ^
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1View.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1View.o] Error 1
simulator/gcc/Makefile:182: recipe for target 'generate_assets' failed
make[1]: *** [generate_assets] Error 2
simulator/gcc/Makefile:40: recipe for target 'all' failed
make: *** [all] Error 2
